--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>X-Ray Binary</title>
+    <title>X-Ray Binary | PORTFOLIO</title>
 </head>
 
 <body>
@@ -100,21 +100,26 @@
             <h1>PROJECTS</h1>
             <div id="project-content">
                 <div id="project">
-                    <img src="assets/images/FixGarage-1280x640.png">
+                    <img src="assets/images/FixGarage.png">
                     <div id="info-project">
                         <p id="p-FixGarage">Fix Garage</p>
-                        <button></button>
+                        <a href="https://github.com/XRayBinary/FixGarage"><button id="github"></button></a>
+                        <a href="https://github.com/XRayBinary/FixGarage"><button id="info"></button></a>
+
                     </div>
+                    <p id="p-FixGarage-info">A minimalistic web app that performs basic CRUD operations on a sample data model.</p>
                 </div>
-                
+
                 <div id="project">
                     <img src="assets/images/GraveLock.png">
                     <div id="info-project">
                         <p id="p-GraveLock">Grave Lock</p>
-                        <button></button>
+                        <a href="https://github.com/XRayBinary/Grave-Lock"><button id="github"></button></a>
+                        <a href="https://github.com/XRayBinary/Grave-Lock"><button id="info"></button></a>
                     </div>
+                    <p id="p-GraveLock-info">Cybersecurity tool designed for password encryption, decryption of hashes using dictionaries.</p>
                 </div>
-               
+
             </div><br>
 
             <h1>TECHNOLOGIES</h1>
