--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li id="div-navegator-li"><a id="a-about" href="#div-about">About</a></li>
                 <li id="div-navegator-li"><a id="a-experience" href="#div-experience">Experience</a></li>
                 <li id="div-navegator-li"><a id="a-project" href="#div-project">Projects</a></li>
+                <li id="div-navegator-li"><a id="a-education" href="#div-education">Education</a></li>
                 <li id="div-navegator-li"><a id="a-contact" href="#div-contact">Contact</a></li>
             </ul>
             <div id="div-showmenu">
@@ -107,7 +108,8 @@
                         <a href="https://github.com/XRayBinary/FixGarage"><button id="info"></button></a>
 
                     </div>
-                    <p id="p-FixGarage-info">A minimalistic web app that performs basic CRUD operations on a sample data model.</p>
+                    <p id="p-FixGarage-info">A minimalistic web app that performs basic CRUD operations on a sample data
+                        model.</p>
                 </div>
 
                 <div id="project">
@@ -117,12 +119,23 @@
                         <a href="https://github.com/XRayBinary/Grave-Lock"><button id="github"></button></a>
                         <a href="https://github.com/XRayBinary/Grave-Lock"><button id="info"></button></a>
                     </div>
-                    <p id="p-GraveLock-info">Cybersecurity tool designed for password encryption, decryption of hashes using dictionaries.</p>
+                    <p id="p-GraveLock-info">Cybersecurity tool designed for password encryption, decryption of hashes
+                        using dictionaries.</p>
+                </div>
+
+                <div id="project">
+                    <img src="assets/images/ModOrganizer.png">
+                    <div id="info-project">
+                        <p id="p-ModOrganizer">Mod Organizer FS22</p>
+                        <a href="https://github.com/XRayBinary/Mod-Organizer"><button id="github"></button></a>
+                        <a href="https://github.com/XRayBinary/Mod-Organizer"><button id="info"></button></a>
+                    </div>
+                    <p id="p-ModOrganizer-info">Tool designed to organize and categorize the different types of mods available for Farming Simulator 2022.</p>
                 </div>
 
             </div><br>
 
-            <h1>TECHNOLOGIES</h1>
+            <h2>TECHNOLOGIES</h2>
             <div id="technology-content">
                 <div class="technology" id="html">
 
@@ -134,6 +147,15 @@
 
                 </div>
                 <div class="technology" id="django">
+
+                </div>
+                <div class="technology" id="python">
+
+                </div>
+                <div class="technology" id="java">
+
+                </div>
+                <div class="technology" id="mysql">
 
                 </div>
             </div>
@@ -171,8 +193,14 @@
         <div class="seccion" id="div-contact">
 
             <div id="contact-content">
-                <h1>GET IN TOUCH</h1>
-
+                <h1>CONTACT</h1>
+                <div id="contact-content">
+                    <div id="p-contact">
+                        <h2>Gmail</h2>     david.sanchezalb@gmail.com<br><br>
+                        <h2>Linkedin</h2>   linkedin.com/in/d-vid<a href="https://www.linkedin.com/in/d-vid/">🔗</a><br><br>
+                        <h2>Github</h2>     github.com/XRayBinary<a href="https://www.linkedin.com/in/d-vid/">🔗</a><br><br>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -182,5 +210,8 @@
     </script>
 
 </body>
+<footer>
+
+</footer>
 
 </html>
