--- a/tests.html
+++ b/tests.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/test.css">
     <title>X-Ray Binary | PORTFOLIO</title>
 </head>
 
@@ -196,7 +196,7 @@
         </div>
     </div>
 
-    <script src="js/main.js">
+    <script src="js/test.js">
 
     </script>
 
