--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                         data-i18n="nav.contact">Contact</a></li>
             </ul>
             <div id="div-showmenu">
-                <button id="button-showmenu" type="button" onclick="menuButton()" value="hide">menu</button>
+                <button id="button-showmenu" type="button" onclick="cambiaTema(ev)" value="hide">menu</button>
             </div>
         </nav>
         <div id="div-style-opt">
-            <button id="button-style-opt">🌙</button>
+            <button id="button-style-opt" value="dark" onclick="cambiaTema()">🌙</button>
+           
         </div>
     </div>
 
