--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/images/Favicon.png" />
 
     <link rel="stylesheet" href="css/styles.css">
     <title>X-Ray Binary | PORTFOLIO</title>
