--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <h2>Gmail</h2> david.sanchezalb@gmail.com<br><br>
                         <h2>Linkedin</h2> linkedin.com/in/d-vid<a
                             href="https://www.linkedin.com/in/d-vid/">🔗</a><br><br>
-                        <h2>Github</h2> github.com/XRayBinary<a href="https://www.linkedin.com/in/d-vid/">🔗</a><br><br>
+                        <h2>Github</h2> github.com/XRayBinary<a href="https://github.com/XRayBinary/">🔗</a><br><br>
                     </div>
                 </div>
             </div>
