--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <div id="div-style-opt">
             <button id="button-style-opt" value="dark" onclick="cambiaTema()">🌙</button>
-           
+
         </div>
     </div>
 
@@ -89,6 +89,17 @@
 
             <h1 data-i18n="projects.title">PROJECTS</h1>
             <div id="project-content">
+                <div id="project">
+                    <img src="assets/images/APYSHELF WEB.png">
+                    <div id="info-project">
+                        <p id="p-APYSHELF">APYSHELF WEB</p>
+                        <a href="https://github.com/XRayBinary/APYSHELF-WEB"><button id="info"></button></a>
+
+                    </div>
+                    <p id="p-FixGarage-info" data-i18n="projects.ApyShelf.description">Web application with a REST API
+                        using Django REST Framework and React + Vite.</p>
+                </div>
+
                 <div id="project">
                     <img src="assets/images/FixGarage.png">
                     <div id="info-project">
@@ -191,7 +202,7 @@
                         <h2>Gmail</h2> david.sanchezalb@gmail.com<br><br>
                         <h2>Linkedin</h2> linkedin.com/in/d-vid<a
                             href="https://www.linkedin.com/in/d-vid/">🔗</a><br><br>
-                        <h2>Github</h2> github.com/XRayBinary<a href="https://github.com/XRayBinary/">🔗</a><br><br>
+                        <h2>Github</h2> github.com/XRayBinary<a href="https://www.linkedin.com/in/d-vid/">🔗</a><br><br>
                     </div>
                 </div>
             </div>
