--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                 <div class="technology" id="javascript">
 
                 </div>
+                <div class="technology" id="react">
+
+                </div>
                 <div class="technology" id="django">
 
                 </div>
