--- a/index.html
+++ b/index.html
@@ -90,13 +90,24 @@
             <h1 data-i18n="projects.title">PROJECTS</h1>
             <div id="project-content">
                 <div id="project">
+                    <img src="assets/images/AtomCrawler.png">
+                    <div id="info-project">
+                        <p id="p-AtomCrawler">AtomCrawler</p>
+                        <a href="https://github.com/XRayBinary/AtomCrawler"><button id="info"></button></a>
+
+                    </div>
+                    <p id="p-AtomCrawler-info" data-i18n="projects.AtomCrawler.description">A web scraper that collects,
+                        structures, and processes data on nuclear power plants worldwide.</p>
+                </div>
+
+                <div id="project">
                     <img src="assets/images/APYSHELF WEB.png">
                     <div id="info-project">
                         <p id="p-APYSHELF">APYSHELF WEB</p>
                         <a href="https://github.com/XRayBinary/APYSHELF-WEB"><button id="info"></button></a>
 
                     </div>
-                    <p id="p-FixGarage-info" data-i18n="projects.ApyShelf.description">Web application with a REST API
+                    <p id="p-ApyShelf-info" data-i18n="projects.ApyShelf.description">Web application with a REST API
                         using Django REST Framework and React + Vite.</p>
                 </div>
 
