--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     tecnológicos.
                 </p>
                 <p id="cv">
-                    <button data-i18n="about.cv">Descargar CV</button>
+                    <a href="assets/docs/CV - David Sánchez Albarrán.pdf" target="_blank" download>
+                        <button data-i18n="about.cv">Descargar CV</button></a>
                 </p>
             </div>
             <div id="experience">
@@ -148,20 +149,23 @@
             <div id="education">
                 <p class="title-section">EDUCATION</p>
                 <div class="child">
-                    <p class="education-title" data-i18n="education.title-1">Specialization in Cybersecurity in Information Technology Environments
+                    <p class="education-title" data-i18n="education.title-1">Specialization in Cybersecurity in
+                        Information Technology Environments
                         (CETI)</p>
                     <p class="education-date">[ 2023 - 2024 ]</p>
                     <p class="education-center">IES Venancio Blanco | Salamanca</p>
 
                 </div>
                 <div class="child">
-                    <p class="education-title" data-i18n="education.title-2">Multiplatform Application Development (DAM)</p>
+                    <p class="education-title" data-i18n="education.title-2">Multiplatform Application Development (DAM)
+                    </p>
                     <p class="education-date">[ 2021 - 2023 ]</p>
                     <p class="education-center">IES Venancio Blanco | Salamanca</p>
 
                 </div>
                 <div class="child">
-                    <p class="education-title" data-i18n="education.title-3">Microcomputer Systems and Networks (SMR)</p>
+                    <p class="education-title" data-i18n="education.title-3">Microcomputer Systems and Networks (SMR)
+                    </p>
                     <p class="education-date">[ 2019 - 2021 ]</p>
                     <p class="education-center">IES Germán Sánchez Ruipérez | Peñaranda de Bracamonte</p>
 
