--- a/index.html
+++ b/index.html
@@ -5,23 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
-
     <link rel="shortcut icon" href="assets/images/Favicon.png" />
     <link rel="stylesheet" href="css/styles.css">
 
     <title>David Sánchez | PORTFOLIO</title>
-
-
 </head>
 
 <body>
@@ -121,7 +108,9 @@
                     <p class="project-tech">Python | Pandas | Matplotlib | Beautifulsoup</p>
                 </div>
                 <div class="child">
-                    <p class="project-name">APYSHELF</p>
+                    <a href="https://github.com/XRayBinary/APYSHELF-WEB">
+                        <p class="project-name">APYSHELF</p>
+                    </a>
                     <p class="project-info" data-i18n="project.info-2">Web application with a REST API using Django REST
                         Framework and React +
                         Vite.
@@ -129,7 +118,9 @@
                     <p class="project-tech">Python | Django | React | Javascript | SQLite</p>
                 </div>
                 <div class="child">
-                    <p class="project-name">FIXGARAGE</p>
+                    <a href="https://github.com/XRayBinary/FixGarage">
+                        <p class="project-name">FIXGARAGE</p>
+                    </a>
                     <p class="project-info" data-i18n="project.info-3">A minimalistic web app that performs basic CRUD
                         operations on a sample data
                         model.
@@ -137,7 +128,9 @@
                     <p class="project-tech">Python | Django | Javascript | SQLite</p>
                 </div>
                 <div class="child">
-                    <p class="project-name">GRAVE-LOCK</p>
+                    <a href="https://github.com/XRayBinary/Grave-Lock">
+                        <p class="project-name">GRAVE-LOCK</p>
+                    </a>
                     <p class="project-info" data-i18n="project.info-4">Cybersecurity tool designed for password
                         encryption, decryption of hashes
                         using
