--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div id="container">
 
         <div id="contact">
-            <a href="https://github.com/XRayBinary"><img src="assets/images/github.png" /></a>
-            <a href="https://www.linkedin.com/in/d-vid/"><img src="assets/images/linkedin.png" /></a>
-            <a href="mailto:david.sanchezalb@gmail.com"><img src="assets/images/gmail.png" /></a>
+            <a href="https://github.com/XRayBinary"><img id="github" /></a>
+            <a href="https://www.linkedin.com/in/d-vid/"><img id="linkedin" /></a>
+            <a href="mailto:david.sanchezalb@gmail.com"><img id="gmail" /></a>
         </div>
 
 
@@ -181,9 +181,6 @@
 
         </div>
     </div>
-
-
-
 
     <script src="js/main.js">
 
