--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="container">
 
         <div id="contact">
-            <a href="https://github.com/XRayBinary"><img id="github" /></a>
+            <a href="https://github.com/SpinBath"><img id="github" /></a>
             <a href="https://www.linkedin.com/in/d-vid/"><img id="linkedin" /></a>
             <a href="mailto:david.sanchezalb@gmail.com"><img id="gmail" /></a>
         </div>
@@ -174,8 +174,8 @@
                     <p class="contact-info"><a href="https://www.linkedin.com/in/d-vid/"><img
                                 src="assets/images/externo.png" /></a>linkedin.com/in/d-vid</p>
                     <p class="contact-title">GITHUB</p>
-                    <p class="contact-info"><a href="https://github.com/XRayBinary"><img
-                                src="assets/images/externo.png" /></a>github.com/XRayBinary</p>
+                    <p class="contact-info"><a href="https://github.com/SpinBath"><img
+                                src="assets/images/externo.png" /></a>github.com/SpinBath</p>
                 </div>
             </div>
 
