--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="assets/images/Favicon.png" />
+    <link rel="shortcut icon" href="assets/images/favicon.png" />
     <link rel="stylesheet" href="css/styles.css">
 
     <title>David Sánchez | PORTFOLIO</title>
