--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
                 <div class="child">
                     <p class="contact-title">GMAIL</p>
                     <p class="contact-info"><a href="mailto:david.sanchezalb@gmail.com"><img
-                                src="assets/images/externo.png" /></a>david.sanchezalb@gmail.com</p>
+                                src="assets/images/externo.png" />david.sanchezalb@gmail.com</p></a>
                     <p class="contact-title">LINKEDIN</p>
                     <p class="contact-info"><a href="https://www.linkedin.com/in/d-vid/"><img
-                                src="assets/images/externo.png" /></a>linkedin.com/in/d-vid</p>
+                                src="assets/images/externo.png" />linkedin.com/in/d-vid</p></a>
                     <p class="contact-title">GITHUB</p>
                     <p class="contact-info"><a href="https://github.com/SpinBath"><img
-                                src="assets/images/externo.png" /></a>github.com/SpinBath</p>
+                                src="assets/images/externo.png" />github.com/SpinBath</p></a>
                 </div>
             </div>
 
