--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div id="contact-url">
                 <p class="title-section">CONTACT</p>
                 <div class="child">
-                    <p class="contact-title">GMAIL</p>
+                    <p class="contact-title">EMAIL</p>
                     <p class="contact-info"><a href="mailto:david.sanchezalb@gmail.com"><img
                                 src="assets/images/externo.png" />david.sanchezalb@gmail.com</p></a>
                     <p class="contact-title">LINKEDIN</p>
