--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
                         <p class="project-name">ATOMCRAWLER</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-1">A web scraper that collects, structures, and
-                        processes data on nuclear power
-                        plants
-                        worldwide.</p>
+                        processes data on nuclear power plants worldwide.</p>
                     <p class="project-tech">Python | Pandas | Matplotlib | Beautifulsoup</p>
                 </div>
                 <div class="child">
@@ -112,8 +110,7 @@
                         <p class="project-name">APYSHELF</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-2">Web application with a REST API using Django REST
-                        Framework and React +
-                        Vite.
+                        Framework and React + Vite.
                     </p>
                     <p class="project-tech">Python | Django | React | Javascript | SQLite</p>
                 </div>
@@ -121,9 +118,8 @@
                     <a href="https://github.com/XRayBinary/FixGarage">
                         <p class="project-name">FIXGARAGE</p>
                     </a>
-                    <p class="project-info" data-i18n="project.info-3">A minimalistic web app that performs basic CRUD
-                        operations on a sample data
-                        model.
+                    <p class="project-info" data-i18n="project.info-3">Web application that performs basic CRUD
+                        operations using Django.
                     </p>
                     <p class="project-tech">Python | Django | Javascript | SQLite</p>
                 </div>
