--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div id="projects">
                 <p class="title-section">PROJECTS</p>
                 <div class="child">
-                    <a href="https://github.com/XRayBinary/AtomCrawler">
+                    <a href="/projects/AtomCrawler.html">
                         <p class="project-name">ATOMCRAWLER</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-1">A web scraper that collects, structures, and
@@ -106,25 +106,25 @@
                     <p class="project-tech">Python | Pandas | Matplotlib | Beautifulsoup</p>
                 </div>
                 <div class="child">
-                    <a href="https://github.com/XRayBinary/APYSHELF-WEB">
+                    <a href="https://github.com/SpinBath/APYSHELF-WEB">
                         <p class="project-name">APYSHELF</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-2">Web application with a REST API using Django REST
                         Framework and React + Vite.
                     </p>
-                    <p class="project-tech">Python | Django | React | Javascript | SQLite</p>
+                    <p class="project-tech">Python | Django | React | JavaScript | SQLite</p>
                 </div>
                 <div class="child">
-                    <a href="https://github.com/XRayBinary/FixGarage">
+                    <a href="https://github.com/SpinBath/FixGarage">
                         <p class="project-name">FIXGARAGE</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-3">Web application that performs basic CRUD
                         operations using Django.
                     </p>
-                    <p class="project-tech">Python | Django | Javascript | SQLite</p>
+                    <p class="project-tech">Python | Django | JavaScript | SQLite</p>
                 </div>
                 <div class="child">
-                    <a href="https://github.com/XRayBinary/Grave-Lock">
+                    <a href="https://github.com/SpinBath/Grave-Lock">
                         <p class="project-name">GRAVE-LOCK</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-4">Cybersecurity tool designed for password
