--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <p class="project-tech">Python | Pandas | Matplotlib | Beautifulsoup</p>
                 </div>
                 <div class="child">
-                    <a href="https://github.com/SpinBath/APYSHELF-WEB">
+                    <a href="/projects/ApyShelf.html">
                         <p class="project-name">APYSHELF</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-2">Web application with a REST API using Django REST
