--- a/projects/AtomCrawler.html
+++ b/projects/AtomCrawler.html
@@ -76,11 +76,11 @@
                     nucleares
                     alrededor del mundo. <br><br>
 
-                    Extrae, procesa y carga los datos recolectados, con los que genera graficos como por ejemplo (Paises
-                    con mayor numero
-                    de reactores nucleares | Capacidad bruta 'MWe', etc... ) ademas de exportar los datos ya procesados
-                    a diferentes formatos de
-                    archivos como CSV o XML.
+                    Extrae, procesa y carga los datos recolectados, con los que genera gráficos como por ejemplo:
+                    <i>Países
+                    con mayor número
+                    de reactores nucleares | Capacidad bruta 'MWe', etc.</i> <br><br> Además, exporta los datos ya procesados a
+                    diferentes formatos de archivo, como CSV o XML.
 
                 </div>
                 <div id="stack">
