--- a/projects/Grave-Lock.html
+++ b/projects/Grave-Lock.html
@@ -49,9 +49,8 @@
                     <input type="radio" name="slider" id="slide4">
 
                     <div class="wrapper-holder">
-                        <div id="slider-image"><img
-                                src="../assets/images/images-projects/GraveLock/GraveLock-logo.png" alt="Image 1"
-                                id="imagenZoom"></div>
+                        <div id="slider-image"><img src="../assets/images/images-projects/GraveLock/GraveLock-logo.png"
+                                alt="Image 1" id="imagenZoom"></div>
                         <div id="slider-image"><img
                                 src="../assets/images/images-projects/AtomCrawler/ATOMCRAWLER-image2.png" alt="Image 1">
                         </div>
