--- a/projects/ApyShelf.html
+++ b/projects/ApyShelf.html
@@ -45,27 +45,21 @@
 
                     <input type="radio" name="slider" id="slide1" checked>
                     <input type="radio" name="slider" id="slide2">
-                    <input type="radio" name="slider" id="slide3">
-                    <input type="radio" name="slider" id="slide4">
+
 
                     <div class="wrapper-holder">
-                        <div id="slider-image"><img
-                                src="../assets/images/images-projects/ApyShelf/ApyShelf-logo.png" alt="Image 1"
-                                id="imagenZoom"></div>
-                        <div id="slider-image"><img
-                                src="../assets/images/images-projects/AtomCrawler/ATOMCRAWLER-image2.png" alt="Image 1">
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/ApyShelf-logo.png"
+                                alt="Image 1" id="imagenZoom"></div>
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/Apyshelf-image2.png"
+                                alt="Image 1">
                         </div>
-                        <div id="slider-image"><img src="../assets/images/images-projects/AtomCrawler/data-image.png"
-                                alt="Image 1"></div>
-                        <div id="slider-image"><img src="../assets/images/images-projects/AtomCrawler/data-image.png"
-                                alt="Image 1"></div>
+
                     </div>
 
                     <div class="nav">
                         <label for="slide1"></label>
                         <label for="slide2"></label>
-                        <label for="slide3"></label>
-                        <label for="slide4"></label>
+
                     </div>
 
                 </div>
@@ -75,9 +69,14 @@
 
                 <div id="resumen">
                     <h2>INFORMATION</h2>
-                    AtomCrawler is an application that collects data from different nuclear reactors worldwide,
-                    generates new data based on the information already gathered, and conducts analyses to present the
-                    processed information through graphs and files.
+                    Aplicación web de una biblioteca desarrollada con Django REST Framework y React<br><br>
+
+                    Esta aplicación permite a los usuarios registrados solicitar préstamos de libros a través de un
+                    navegador, donde pueden explorar fácilmente el catálogo disponible en la biblioteca.<br><br>
+
+                    Desde el panel de administración, los administradores cuentan con herramientas avanzadas para
+                    gestionar tanto los libros disponibles en la base de datos como los préstamos realizados por los
+                    usuarios.
                 </div>
                 <div id="stack">
                     <p id="title">
