--- a/projects/ApyShelf.html
+++ b/projects/ApyShelf.html
@@ -45,20 +45,38 @@
 
                     <input type="radio" name="slider" id="slide1" checked>
                     <input type="radio" name="slider" id="slide2">
-
+                    <input type="radio" name="slider" id="slide3">
+                    <input type="radio" name="slider" id="slide4">
+                    <input type="radio" name="slider" id="slide5">
+                    <input type="radio" name="slider" id="slide6">
 
                     <div class="wrapper-holder">
                         <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/ApyShelf-logo.png"
                                 alt="Image 1" id="imagenZoom"></div>
-                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/Apyshelf-image2.png"
-                                alt="Image 1">
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/Apyshelf-image1.png"
+                                alt="Image 2">
                         </div>
-
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/Apyshelf-image2.png"
+                                alt="Image 3">
+                        </div>
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/ApyShelf-image3.png"
+                                alt="Image 4">
+                        </div>
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/ApyShelf-image4.png"
+                                alt="Image 5">
+                        </div>
+                        <div id="slider-image"><img src="../assets/images/images-projects/ApyShelf/Apyshelf-image5.png"
+                                alt="Image 6">
+                        </div>
                     </div>
 
                     <div class="nav">
                         <label for="slide1"></label>
                         <label for="slide2"></label>
+                        <label for="slide3"></label>
+                        <label for="slide4"></label>
+                        <label for="slide5"></label>
+                        <label for="slide6"></label>
 
                     </div>
 
