--- a/projects/AtomCrawler.html
+++ b/projects/AtomCrawler.html
@@ -45,6 +45,11 @@
 
                     <input type="radio" name="slider" id="slide1" checked>
                     <input type="radio" name="slider" id="slide2">
+                    <input type="radio" name="slider" id="slide3">
+                    <input type="radio" name="slider" id="slide4">
+                    <input type="radio" name="slider" id="slide5">
+                    <input type="radio" name="slider" id="slide6">
+                    <input type="radio" name="slider" id="slide7">
 
 
                     <div class="wrapper-holder">
@@ -52,7 +57,27 @@
                                 src="../assets/images/images-projects/AtomCrawler/AtomCrawler-logo.png" alt="Image 1"
                                 id="imagenZoom"></div>
                         <div id="slider-image"><img
-                                src="../assets/images/images-projects/AtomCrawler/ATOMCRAWLER-image2.png" alt="Image 1">
+                                src="../assets/images/images-projects/AtomCrawler/ATOMCRAWLER-image2.png" alt="Image 2">
+                        </div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/AtomCrawler/AtomCrawler-dataimage1.png"
+                                alt="Image 3">
+                        </div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/AtomCrawler/AtomCrawler-dataimage2.png"
+                                alt="Image 4">
+                        </div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/AtomCrawler/AtomCrawler-graphs1.png"
+                                alt="Image 5">
+                        </div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/AtomCrawler/AtomCrawler-graphs2.png"
+                                alt="Image 6">
+                        </div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/AtomCrawler/AtomCrawler-graphs3.png"
+                                alt="Image 7">
                         </div>
 
                     </div>
@@ -60,7 +85,11 @@
                     <div class="nav">
                         <label for="slide1"></label>
                         <label for="slide2"></label>
-
+                        <label for="slide3"></label>
+                        <label for="slide4"></label>
+                        <label for="slide5"></label>
+                        <label for="slide6"></label>
+                        <label for="slide7"></label>
                     </div>
 
                 </div>
@@ -78,8 +107,9 @@
 
                     Extrae, procesa y carga los datos recolectados, con los que genera gráficos como por ejemplo:
                     <i>Países
-                    con mayor número
-                    de reactores nucleares | Capacidad bruta 'MWe', etc.</i> <br><br> Además, exporta los datos ya procesados a
+                        con mayor número
+                        de reactores nucleares | Capacidad bruta 'MWe', etc.</i> <br><br> Además, exporta los datos ya
+                    procesados a
                     diferentes formatos de archivo, como CSV o XML.
 
                 </div>
