Update FixGarage Page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <p class="project-tech">Python | Django | React | JavaScript | SQLite</p>
                 </div>
                 <div class="child">
-                    <a href="https://github.com/SpinBath/FixGarage">
+                    <a href="/projects/FixGarage.html">
                         <p class="project-name">FIXGARAGE</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-3">Web application that performs basic CRUD
