--- a/projects/FixGarage.html
+++ b/projects/FixGarage.html
@@ -47,18 +47,24 @@
                     <input type="radio" name="slider" id="slide2">
                     <input type="radio" name="slider" id="slide3">
                     <input type="radio" name="slider" id="slide4">
+                    <input type="radio" name="slider" id="slide5">
 
                     <div class="wrapper-holder">
+                        <div id="slider-image"><img src="../assets/images/images-projects/FixGarage/FixGarage-logo.png"
+                                alt="Image 1" id="imagenZoom"></div>
                         <div id="slider-image"><img
-                                src="../assets/images/images-projects/FixGarage/FixGarage-logo.png" alt="Image 1"
+                                src="../assets/images/images-projects/FixGarage/FixGarage-image1.png" alt="Image 2"
                                 id="imagenZoom"></div>
                         <div id="slider-image"><img
-                                src="../assets/images/images-projects/AtomCrawler/ATOMCRAWLER-image2.png" alt="Image 1">
-                        </div>
-                        <div id="slider-image"><img src="../assets/images/images-projects/AtomCrawler/data-image.png"
-                                alt="Image 1"></div>
-                        <div id="slider-image"><img src="../assets/images/images-projects/AtomCrawler/data-image.png"
-                                alt="Image 1"></div>
+                                src="../assets/images/images-projects/FixGarage/FixGarage-image2.png" alt="Image 3"
+                                id="imagenZoom"></div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/FixGarage/FixGarage-image3.png" alt="Image 4"
+                                id="imagenZoom"></div>
+                        <div id="slider-image"><img
+                                src="../assets/images/images-projects/FixGarage/FixGarage-image4.png" alt="Image 5"
+                                id="imagenZoom"></div>
+
                     </div>
 
                     <div class="nav">
@@ -66,6 +72,7 @@
                         <label for="slide2"></label>
                         <label for="slide3"></label>
                         <label for="slide4"></label>
+                        <label for="slide5"></label>
                     </div>
 
                 </div>
@@ -75,9 +82,14 @@
 
                 <div id="resumen">
                     <h2>INFORMATION</h2>
-                    AtomCrawler is an application that collects data from different nuclear reactors worldwide,
-                    generates new data based on the information already gathered, and conducts analyses to present the
-                    processed information through graphs and files.
+                    Aplicación web para taller mecánico desarrollada con Django, que permite realizar operaciones CRUD
+                    básicas.<br><br>
+
+                    Esta aplicación facilita a los trabajadores del taller el registro y gestión de clientes, vehículos,
+                    servicios ofrecidos y facturación.<br><br>
+
+                    De esta manera, tanto el dueño como los empleados pueden tener un mayor control de las operaciones
+                    del taller y un seguimiento más eficiente de los vehículos que ingresan.
                 </div>
                 <div id="stack">
                     <p id="title">
