--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p class="project-tech">Python | Django | JavaScript | SQLite</p>
                 </div>
                 <div class="child">
-                    <a href="https://github.com/SpinBath/Grave-Lock">
+                    <a href="/projects/Grave-Lock.html">
                         <p class="project-name">GRAVE-LOCK</p>
                     </a>
                     <p class="project-info" data-i18n="project.info-4">Cybersecurity tool designed for password
@@ -133,6 +133,17 @@
                         dictionaries.</p>
                     <p class="project-tech">Python | Hashlib</p>
                 </div>
+
+                <div class="child">
+                    <a href="https://github.com/SpinBath/Datashes">
+                        <p class="project-name">DATASHES</p>
+                    </a>
+                    <p style="font-weight: bold">[ Under Development ]</p>
+                    <p class="project-info" data-i18n="project.info-5">
+                        Python tool that uses PySpark to analyze log files from a web server.</p>
+                    <p class="project-tech">Python | PySpark | Matplotlib </p>
+                </div>
+
             </div>
 
             <div id="education">
