--- a/projects/Grave-Lock.html
+++ b/projects/Grave-Lock.html
@@ -63,7 +63,8 @@
 
                 <div id="resumen">
                     <h2>INFORMATION</h2>
-                    
+                    Herramienta de ciberseguridad sin interfaz grafica, desarollada en Python, para el cifrado y
+                    descifrado de contraseñas mediantes el uso de díccionarios.
                 </div>
                 <div id="stack">
                     <p id="title">
